--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://kit.fontawesome.com/6eb4c60ec2.js" crossorigin="anonymous"></script>
-      <title>Agrobots Minisite</title>
+      <title>Agrobots</title>
   </head>
   <body>
     <div id="app"></div>
