--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+      <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://kit.fontawesome.com/6eb4c60ec2.js" crossorigin="anonymous"></script>
       <title>Agrobots</title>
